# python-web

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
flaskr/: __init__.py  auth.py  blog.py  db.py  navboard.py  schema.sql  webtools.py
flaskr/static/: style.css
flaskr/templates/: base.html  navbar.html
flaskr/templates/auth/: login.html
flaskr/templates/blog/: create.html  index.html  update.html
flaskr/templates/navboard/: create.html  index.html  update.html
flaskr/templates/webtools/: quick-iina.html
